# curb

./: CMakeLists.txt  README.md  package.xml
config/: example_config.yaml
include/curb/: aggregate.h  generate_curb.h  helper.h
src/: aggregate.cpp  downsample.cpp  generate_curb.cpp  helper.cpp  make_ground.cpp  outlier.cpp
