<?xml version="1.0"?>
<package format="2">
  <name>curb</name>
  <version>0.0.1</version>
  <description>The curb package</description>
  <maintainer email="linh@todo.todo">linh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>pcl_conversions</depend>
  <depend>grid_map_ros</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
</package>
